Add header structure and fontawesome

--- a/index.html
+++ b/index.html
@@ -6,11 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- FONTAWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
 
     <!-- HEADER -->
+    <div class="header-section flex">
+        <!-- NAVIGATION -->
+        <nav class="navigation">
+            <ul class="flex">
+                <li><a href="http://">Donna</a></li>
+                <li><a href="http://">Uomo</a></li>
+                <li><a href="http://">Bambini</a></li>
+            </ul>
+        </nav>
+        <!-- /NAVIGATION -->
+
+        <!-- LOGO -->
+        <div class="logo">
+            <img src="img/boolean-logo.png" alt="">
+        </div>
+        <!-- /LOGO -->
+
+        <!-- ACTIONS -->
+        <div class="actions">
+            <div class="icons flex">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
+        </div>
+        <!-- /ACTIONS -->
+
+    </div>
     <!-- /HEADER -->
 
     <!-- MAIN -->
