Add: header section done

--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
         <!-- ACTIONS -->
         <div class="actions">
             <div class="icons flex">
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
+                <a href="http://">
+                    <i class="fa-regular fa-user"></i>
+                </a>
+                <a href="http://">
+                    <i class="fa-regular fa-heart"></i>
+                </a>
+                <a href="http://">
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </a>
             </div>
         </div>
         <!-- /ACTIONS -->
