Add: main layout base

--- a/index.html
+++ b/index.html
@@ -48,11 +48,42 @@
             </div>
         </div>
         <!-- /ACTIONS -->
-
     </div>
     <!-- /HEADER -->
 
     <!-- MAIN -->
+    <main class="main flex">
+        <!-- CARDS -->
+        <div class="card">
+            <div class="image">
+                <img src="img/1.webp" alt="">
+            </div>
+            <div class="details">
+                <div class="brand"></div>
+                <div class="name"></div>
+                <div class="price"></div>
+            </div>
+        </div>
+
+
+
+
+        <div class="card">
+
+        </div>
+        <div class="card">
+
+        </div>
+        <div class="card">
+
+        </div>
+        <div class="card">
+
+        </div>
+        <div class="card">
+
+        </div>
+    </main>
     <!-- /MAIN -->
 
     <!-- FOOTER -->
