Add: details on layout card

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
                 <img src="img/1.webp" alt="">
             </div>
             <div class="details">
-                <div class="brand"></div>
-                <div class="name"></div>
-                <div class="price"></div>
+                <div class="brand">Levi's</div>
+                <div class="name">relaxed fit tee unisex</div>
+                <div class="discount">14,99 €</div>
+                <div class="price">29,99 €</div>
             </div>
         </div>
 
