--- a/index.html
+++ b/index.html
@@ -66,23 +66,64 @@
             </div>
         </div>
 
-
-
-
         <div class="card">
-
+            <div class="image">
+                <img src="img/2.webp" alt="">
+            </div>
+            <div class="details">
+                <div class="brand">Guess</div>
+                <div class="name">roses tee</div>
+                <div class="discount">20,99 €</div>
+                <div class="price">29,99 €</div>
+            </div>
         </div>
-        <div class="card">
 
+        <div class="card">
+            <div class="image">
+                <img src="img/3.webp" alt="">
+            </div>
+            <div class="details">
+                <div class="brand">Come Zucchero Filato</div>
+                <div class="name">voglia di colori pastello</div>
+                <div class="discount">129,99 €</div>
+                <div class="price">164,99 €</div>
+            </div>
         </div>
-        <div class="card">
 
+        <div class="card">
+            <div class="image">
+                <img src="img/4.webp" alt="">
+            </div>
+            <div class="details">
+                <div class="brand">Levi's</div>
+                <div class="name">tee unisex</div>
+                <div class="discount">14,99 €</div>
+                <div class="price">29,99 €</div>
+            </div>
         </div>
-        <div class="card">
 
+        <div class="card">
+            <div class="image">
+                <img src="img/5.webp" alt="">
+            </div>
+            <div class="details">
+                <div class="brand">Maya Deluxe</div>
+                <div class="name">stripe bodice</div>
+                <div class="discount">99,99 €</div>
+                <div class="price"></div>
+            </div>
         </div>
-        <div class="card">
 
+        <div class="card">
+            <div class="image">
+                <img src="img/6.webp" alt="">
+            </div>
+            <div class="details">
+                <div class="brand">Espirit</div>
+                <div class="name">maglione - black</div>
+                <div class="discount">29,99 €</div>
+                <div class="price"></div>
+            </div>
         </div>
     </main>
     <!-- /MAIN -->
