--- a/index.html
+++ b/index.html
@@ -129,6 +129,33 @@
     <!-- /MAIN -->
 
     <!-- FOOTER -->
+    <footer class="footer flex">
+        <!-- COMPANY -->
+        <div class="company">
+            <b>Boolando s.r.l</b>
+            <ul class="info flex">
+                <li><a href="http://">Informazioni legali</a></li>
+                <li><a href="http://">Informativa sulla privacy</a></li>
+                <li><a href="http://">Diritto di recesso</a></li>
+            </ul>
+        </div>
+        <!-- /COMPANY -->
+
+        <!-- SOCIALS -->
+        <div class="socials">
+            <b>Trovaci anche su</b>
+            <ul class="info flex">
+                <li><a href="http://"><i class="fa-brands fa-square-twitter"></i></a></li>
+                <li><a href="http://"><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li><a href="http://"><i class="fa-brands fa-square-instagram"></i></a></li>
+                <li><a href="http://"><i class="fa-brands fa-square-pinterest"></i></a></li>
+                <li><a href="http://"><i class="fa-brands fa-youtube"></i></a></li>
+            </ul>
+        </div>
+        <!-- /SOCIALS -->
+
+    </footer>
+
     <!-- /FOOTER -->
 
 </body>
