--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="card">
             <div class="image">
                 <img src="img/1.webp" alt="">
+                <img class="image2" src="img/1b.webp" alt="">
             </div>
             <div class="details">
                 <div class="brand">Levi's</div>
@@ -69,6 +70,7 @@
         <div class="card">
             <div class="image">
                 <img src="img/2.webp" alt="">
+                <img class="image2" src="img/2b.webp" alt="">
             </div>
             <div class="details">
                 <div class="brand">Guess</div>
@@ -81,6 +83,7 @@
         <div class="card">
             <div class="image">
                 <img src="img/3.webp" alt="">
+                <img class="image2" src="img/3b.webp" alt="">
             </div>
             <div class="details">
                 <div class="brand">Come Zucchero Filato</div>
@@ -93,6 +96,7 @@
         <div class="card">
             <div class="image">
                 <img src="img/4.webp" alt="">
+                <img class="image2" src="img/4b.webp" alt="">
             </div>
             <div class="details">
                 <div class="brand">Levi's</div>
@@ -105,6 +109,7 @@
         <div class="card">
             <div class="image">
                 <img src="img/5.webp" alt="">
+                <img class="image2" src="img/5b.webp" alt="">
             </div>
             <div class="details">
                 <div class="brand">Maya Deluxe</div>
@@ -117,6 +122,7 @@
         <div class="card">
             <div class="image">
                 <img src="img/6.webp" alt="">
+                <img class="image2" src="img/6b.webp" alt="">
             </div>
             <div class="details">
                 <div class="brand">Espirit</div>
