--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- CARDS -->
         <div class="card">
             <div class="image">
-                <img src="img/1.webp" alt="">
+                <img class="image1" src="img/1.webp" alt="">
                 <img class="image2" src="img/1b.webp" alt="">
             </div>
             <div class="details">
@@ -69,7 +69,7 @@
 
         <div class="card">
             <div class="image">
-                <img src="img/2.webp" alt="">
+                <img class="image1" src="img/2.webp" alt="">
                 <img class="image2" src="img/2b.webp" alt="">
             </div>
             <div class="details">
@@ -82,7 +82,7 @@
 
         <div class="card">
             <div class="image">
-                <img src="img/3.webp" alt="">
+                <img class="image1" src="img/3.webp" alt="">
                 <img class="image2" src="img/3b.webp" alt="">
             </div>
             <div class="details">
@@ -95,7 +95,7 @@
 
         <div class="card">
             <div class="image">
-                <img src="img/4.webp" alt="">
+                <img class="image1" src="img/4.webp" alt="">
                 <img class="image2" src="img/4b.webp" alt="">
             </div>
             <div class="details">
@@ -108,7 +108,7 @@
 
         <div class="card">
             <div class="image">
-                <img src="img/5.webp" alt="">
+                <img class="image1" src="img/5.webp" alt="">
                 <img class="image2" src="img/5b.webp" alt="">
             </div>
             <div class="details">
@@ -121,7 +121,7 @@
 
         <div class="card">
             <div class="image">
-                <img src="img/6.webp" alt="">
+                <img class="image1" src="img/6.webp" alt="">
                 <img class="image2" src="img/6b.webp" alt="">
             </div>
             <div class="details">
