Add: tag position

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             <div class="image">
                 <img class="image1" src="img/1.webp" alt="">
                 <img class="image2" src="img/1b.webp" alt="">
+                <div class="tag-container">
+                    <span class="sconto">-50%</span>
+                    <span class="sostenibilita">Sostenibilità</span>
+                </div>
             </div>
             <div class="details">
                 <div class="brand">Levi's</div>
@@ -71,6 +75,10 @@
             <div class="image">
                 <img class="image1" src="img/2.webp" alt="">
                 <img class="image2" src="img/2b.webp" alt="">
+                <div class="tag-container">
+                    <span class="sconto">-30%</span>
+                </div>
+
             </div>
             <div class="details">
                 <div class="brand">Guess</div>
@@ -84,6 +92,10 @@
             <div class="image">
                 <img class="image1" src="img/3.webp" alt="">
                 <img class="image2" src="img/3b.webp" alt="">
+                <div class="tag-container">
+                    <span class="sconto">-30%</span>
+                </div>
+
             </div>
             <div class="details">
                 <div class="brand">Come Zucchero Filato</div>
@@ -97,6 +109,10 @@
             <div class="image">
                 <img class="image1" src="img/4.webp" alt="">
                 <img class="image2" src="img/4b.webp" alt="">
+                <div class="tag-container">
+                    <span class="sconto">-50%</span>
+                    <span class="sostenibilita">Sostenibilità</span>
+                </div>
             </div>
             <div class="details">
                 <div class="brand">Levi's</div>
@@ -123,6 +139,9 @@
             <div class="image">
                 <img class="image1" src="img/6.webp" alt="">
                 <img class="image2" src="img/6b.webp" alt="">
+                <div class="tag-container">
+                    <span class="sostenibilita">Sostenibilità</span>
+                </div>
             </div>
             <div class="details">
                 <div class="brand">Espirit</div>
