Add: heart tag start

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <span class="sconto">-50%</span>
                     <span class="sostenibilita">Sostenibilità</span>
                 </div>
+                <div class="heart">&hearts;</div>
             </div>
             <div class="details">
                 <div class="brand">Levi's</div>
