Add: heart, position and hover

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="tag-container">
                     <span class="sconto">-30%</span>
                 </div>
-
+                <div class="heart">&hearts;</div>
             </div>
             <div class="details">
                 <div class="brand">Guess</div>
@@ -96,7 +96,7 @@
                 <div class="tag-container">
                     <span class="sconto">-30%</span>
                 </div>
-
+                <div class="heart">&hearts;</div>
             </div>
             <div class="details">
                 <div class="brand">Come Zucchero Filato</div>
@@ -114,6 +114,7 @@
                     <span class="sconto">-50%</span>
                     <span class="sostenibilita">Sostenibilità</span>
                 </div>
+                <div class="heart">&hearts;</div>
             </div>
             <div class="details">
                 <div class="brand">Levi's</div>
@@ -127,6 +128,7 @@
             <div class="image">
                 <img class="image1" src="img/5.webp" alt="">
                 <img class="image2" src="img/5b.webp" alt="">
+                <div class="heart">&hearts;</div>
             </div>
             <div class="details">
                 <div class="brand">Maya Deluxe</div>
@@ -143,6 +145,7 @@
                 <div class="tag-container">
                     <span class="sostenibilita">Sostenibilità</span>
                 </div>
+                <div class="heart">&hearts;</div>
             </div>
             <div class="details">
                 <div class="brand">Espirit</div>
