Add: underline hover on navigation

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <!-- NAVIGATION -->
         <nav class="navigation">
             <ul class="flex">
-                <li><a href="http://">Donna</a></li>
-                <li><a href="http://">Uomo</a></li>
-                <li><a href="http://">Bambini</a></li>
+                <li><a class="undeline" href="http://">Donna</a></li>
+                <li><a class="undeline" href="http://">Uomo</a></li>
+                <li><a class="undeline" href="http://">Bambini</a></li>
             </ul>
         </nav>
         <!-- /NAVIGATION -->
