Add: clickable cards with a ref

--- a/index.html
+++ b/index.html
@@ -55,104 +55,116 @@
     <main class="main flex">
         <!-- CARDS -->
         <div class="card">
-            <div class="image">
-                <img class="image1" src="img/1.webp" alt="">
-                <img class="image2" src="img/1b.webp" alt="">
-                <div class="tag-container">
-                    <span class="sconto">-50%</span>
-                    <span class="sostenibilita">Sostenibilità</span>
+            <a href="http://">
+                <div class="image">
+                    <img class="image1" src="img/1.webp" alt="">
+                    <img class="image2" src="img/1b.webp" alt="">
+                    <div class="tag-container">
+                        <span class="sconto">-50%</span>
+                        <span class="sostenibilita">Sostenibilità</span>
+                    </div>
+                    <div class="heart">&hearts;</div>
                 </div>
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="details">
-                <div class="brand">Levi's</div>
-                <div class="name">relaxed fit tee unisex</div>
-                <div class="discount">14,99 €</div>
-                <div class="price">29,99 €</div>
-            </div>
+                <div class="details">
+                    <div class="brand">Levi's</div>
+                    <div class="name">relaxed fit tee unisex</div>
+                    <div class="discount">14,99 €</div>
+                    <div class="price">29,99 €</div>
+                </div>
+            </a>
         </div>
 
         <div class="card">
-            <div class="image">
-                <img class="image1" src="img/2.webp" alt="">
-                <img class="image2" src="img/2b.webp" alt="">
-                <div class="tag-container">
-                    <span class="sconto">-30%</span>
+            <a href="http://">
+                <div class="image">
+                    <img class="image1" src="img/2.webp" alt="">
+                    <img class="image2" src="img/2b.webp" alt="">
+                    <div class="tag-container">
+                        <span class="sconto">-30%</span>
+                    </div>
+                    <div class="heart">&hearts;</div>
                 </div>
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="details">
-                <div class="brand">Guess</div>
-                <div class="name">roses tee</div>
-                <div class="discount">20,99 €</div>
-                <div class="price">29,99 €</div>
-            </div>
+                <div class="details">
+                    <div class="brand">Guess</div>
+                    <div class="name">roses tee</div>
+                    <div class="discount">20,99 €</div>
+                    <div class="price">29,99 €</div>
+                </div>
+            </a>
         </div>
 
         <div class="card">
-            <div class="image">
-                <img class="image1" src="img/3.webp" alt="">
-                <img class="image2" src="img/3b.webp" alt="">
-                <div class="tag-container">
-                    <span class="sconto">-30%</span>
+            <a href="http://">
+                <div class="image">
+                    <img class="image1" src="img/3.webp" alt="">
+                    <img class="image2" src="img/3b.webp" alt="">
+                    <div class="tag-container">
+                        <span class="sconto">-30%</span>
+                    </div>
+                    <div class="heart">&hearts;</div>
                 </div>
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="details">
-                <div class="brand">Come Zucchero Filato</div>
-                <div class="name">voglia di colori pastello</div>
-                <div class="discount">129,99 €</div>
-                <div class="price">164,99 €</div>
-            </div>
+                <div class="details">
+                    <div class="brand">Come Zucchero Filato</div>
+                    <div class="name">voglia di colori pastello</div>
+                    <div class="discount">129,99 €</div>
+                    <div class="price">164,99 €</div>
+                </div>
+            </a>
         </div>
 
         <div class="card">
-            <div class="image">
-                <img class="image1" src="img/4.webp" alt="">
-                <img class="image2" src="img/4b.webp" alt="">
-                <div class="tag-container">
-                    <span class="sconto">-50%</span>
-                    <span class="sostenibilita">Sostenibilità</span>
+            <a href="http://">
+                <div class="image">
+                    <img class="image1" src="img/4.webp" alt="">
+                    <img class="image2" src="img/4b.webp" alt="">
+                    <div class="tag-container">
+                        <span class="sconto">-50%</span>
+                        <span class="sostenibilita">Sostenibilità</span>
+                    </div>
+                    <div class="heart">&hearts;</div>
                 </div>
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="details">
-                <div class="brand">Levi's</div>
-                <div class="name">tee unisex</div>
-                <div class="discount">14,99 €</div>
-                <div class="price">29,99 €</div>
-            </div>
+                <div class="details">
+                    <div class="brand">Levi's</div>
+                    <div class="name">tee unisex</div>
+                    <div class="discount">14,99 €</div>
+                    <div class="price">29,99 €</div>
+                </div>
+            </a>
         </div>
 
         <div class="card">
-            <div class="image">
-                <img class="image1" src="img/5.webp" alt="">
-                <img class="image2" src="img/5b.webp" alt="">
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="details">
-                <div class="brand">Maya Deluxe</div>
-                <div class="name">stripe bodice</div>
-                <div class="discount">99,99 €</div>
-                <div class="price"></div>
-            </div>
+            <a href="http://">
+                <div class="image">
+                    <img class="image1" src="img/5.webp" alt="">
+                    <img class="image2" src="img/5b.webp" alt="">
+                    <div class="heart">&hearts;</div>
+                </div>
+                <div class="details">
+                    <div class="brand">Maya Deluxe</div>
+                    <div class="name">stripe bodice</div>
+                    <div class="discount">99,99 €</div>
+                    <div class="price"></div>
+                </div>
+            </a>
         </div>
 
         <div class="card">
-            <div class="image">
-                <img class="image1" src="img/6.webp" alt="">
-                <img class="image2" src="img/6b.webp" alt="">
-                <div class="tag-container">
-                    <span class="sostenibilita">Sostenibilità</span>
+            <a href="http://">
+                <div class="image">
+                    <img class="image1" src="img/6.webp" alt="">
+                    <img class="image2" src="img/6b.webp" alt="">
+                    <div class="tag-container">
+                        <span class="sostenibilita">Sostenibilità</span>
+                    </div>
+                    <div class="heart">&hearts;</div>
                 </div>
-                <div class="heart">&hearts;</div>
-            </div>
-            <div class="details">
-                <div class="brand">Espirit</div>
-                <div class="name">maglione - black</div>
-                <div class="discount">29,99 €</div>
-                <div class="price"></div>
-            </div>
+                <div class="details">
+                    <div class="brand">Espirit</div>
+                    <div class="name">maglione - black</div>
+                    <div class="discount">29,99 €</div>
+                    <div class="price"></div>
+                </div>
+            </a>
         </div>
     </main>
     <!-- /MAIN -->
